# lab_02_vector_databases

./: pyproject.toml
scripts/: dataset_preparation.py  db_init.py  image_vectorization.py  model_selection_and_understanding.ipynb  search_most_similar_embeddings.py
