[project]
name = "lab_02_db"
version = "0.1.0"
description = "db for IPUM AGH"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "more-itertools>=10.7.0",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "pillow>=11.2.1",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1"
]
